# qt5-gl-test

./: Dockerfile.amd64  Dockerfile.armhf  README.md
src/: CMakeLists.txt  test.cpp  test.h
